# CECS-429-Group-Project

./: .gitignore  README.md
search_engine/: Cargo.toml  coverpage.aux  coverpage.out  document_accumulator.rs  k_gram_index.rs  tasks.txt
search_engine/assets/: generate_docs.sh
search_engine/assets/articles/: article10.json  article100.json  article1000.json  article10000.json  article10001.json  article10002.json  article10003.json  article10004.json  article10005.json  article10006.json  article10007.json  article10008.json  article10009.json  article1001.json  article10010.json  article10011.json  article10012.json  article10013.json  article10014.json  article10015.json  article10016.json  article10017.json  article10018.json  article10019.json  article1002.json  article10020.json  article10021.json  article10022.json  article10023.json  article10024.json  article10025.json  article10026.json  article10027.json  article10028.json  article10029.json  article1003.json  article10030.json  article10031.json  article10032.json  article10033.json  (+36755 more)
search_engine/assets/documents/: doc1.txt
search_engine/assets/documents2/: doc2.txt  doc5.txt
search_engine/report/: coverpage.aux  coverpage.out  coverpage.tex
search_engine/src/: lib.rs  main.rs  main.rs.orig
search_engine/src/classifier/: bayesian.rs  bayesian_classifier.rs  classifier.rs  mod.rs  rocchio.rs  rocchio_classifier.rs
search_engine/tests/: inverted_index_test.rs  k_gram_index.rs  normalize.rs  positional_index_test.rs  query_parser.rs  query_processer.rs  query_processor.rs
(+29 files in other folders)
