[package]
name = "search_engine"
version = "2.0.0"
authors = ["Harold Agnote <haroldagnote38@hotmail.com>", "Braulio Flores <braulio-flores@hotmail.com>", "David Van <David@DavidVan.net>"]

[dependencies]
stemmer = "0.3.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.3"
byteorder = "1"
btree = { git = "http://github.com/wspeirs/btree" }
